<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LibreFragment">

    <LinearLayout
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/ope_libre"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textAlignment="center"
                android:fontFamily="@font/nunito_black"
                android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="¿Desea activar el modo LIBRE?"
            android:textAlignment="center"
            android:textColor="@color/gris"
            android:textSize="20sp"
            android:fontFamily="@font/nunito_extrabold"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnlibreno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/colorDanger"
                android:text="@string/btn_no"
                android:layout_margin="5sp"
                android:fontFamily="@font/nunito_extrabold"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:cornerRadius="10sp"/>

            <Button
                android:id="@+id/btnlibresi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSuccess"
                android:text="@string/btn_si"
                android:layout_margin="5sp"
                android:fontFamily="@font/nunito_extrabold"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:cornerRadius="10sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>