<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.GalonesFragment">

    <LinearLayout
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20sp"
        android:paddingBottom="10sp"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/ope_galones"
                android:fontFamily="@font/nunito_black"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:layout_marginBottom="10sp"
                android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertgalones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Cantidad de Galones"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icon_galones">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputmontogalones"
                    android:fontFamily="@font/nunito_semibold"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btncancelargalones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorDanger"
                android:text="@string/btn_cancelar"
                android:fontFamily="@font/nunito_extrabold"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:cornerRadius="10sp" />

            <Button
                android:id="@+id/btnagregargalones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/btn_agregar"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorSuccess"
                android:textSize="10sp"
                android:fontFamily="@font/nunito_extrabold"
                app:cornerRadius="10sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>