<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="370sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:backgroundTint="@color/white"
            android:background="@drawable/cardmodal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_black"
                android:text="@string/ope_NDespachoLargo"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alertPlaca"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:hint="Ingresar N° de Placa"
                    app:boxBackgroundMode="outline"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:endIconMode="clear_text"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputPlaca"
                        android:fontFamily="@font/nunito_semibold"
                        android:textSize="12sp"
                        android:text="000-0000"
                        android:inputType="textCapCharacters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/buscarPlacaFactura"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/btn_buscar"
                    android:textSize="10sp"
                    android:fontFamily="@font/nunito_extrabold"
                    android:layout_weight="1"
                    app:cornerRadius="10sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorSecondary"
                    android:layout_marginTop="2sp"
                    android:visibility="gone"
                    android:layout_marginLeft="10sp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textNFC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Detectar la Etiqueta NFC"
                app:boxBackgroundColor="#E4E4E4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                android:layout_marginBottom="5sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_EtiquetaNFC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alertRUC"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:hint="Ingresar RUC"
                    app:boxBackgroundMode="outline"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:endIconMode="clear_text"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputRUC"
                        android:fontFamily="@font/nunito_semibold"
                        android:textSize="12sp"
                        android:inputType="number"
                        android:maxLength="11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/buscarRUCFactura"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/btn_sunat"
                    android:textSize="10sp"
                    android:layout_weight="1"
                    app:cornerRadius="10sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorSecondary"
                    android:fontFamily="@font/nunito_extrabold"
                    android:layout_marginTop="-8sp"
                    android:layout_marginLeft="10sp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertRazSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingresar Razon Social"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                android:layout_weight="1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputRazSocial"
                    android:fontFamily="@font/nunito_semibold"
                    android:textSize="12sp"
                    android:inputType="textCapCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingresar Dirección"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                android:layout_weight="1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDireccion"
                    android:fontFamily="@font/nunito_semibold"
                    android:textSize="12sp"
                    android:inputType="textCapCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertObservacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingresar Observación"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputObservacion"
                    android:fontFamily="@font/nunito_semibold"
                    android:textSize="12sp"
                    android:inputType="textCapCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnCancelarNotaDespacho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancelar"
                    android:fontFamily="@font/nunito_extrabold"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:layout_margin="5sp"
                    android:backgroundTint="@color/colorDanger"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:cornerRadius="10sp"
                    android:layout_weight="1" />


                <Button
                    android:id="@+id/btnAgregarNotaDespacho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_agregar"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:backgroundTint="@color/colorSuccess"
                    android:layout_margin="5sp"
                    android:fontFamily="@font/nunito_extrabold"
                    app:cornerRadius="10sp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>